--- a/Fronte_End/pages/adminPages/Employee.html
+++ b/Fronte_End/pages/adminPages/Employee.html
@@ -533,7 +533,7 @@
                                     <tr>
                                         <th scope="col">Employee code</th>
                                         <th scope="col">Employee name</th>
-                                        <th scope="col">Employee Profile Pic</th>
+<!--                                        <th scope="col">Employee Profile Pic</th>-->
                                         <th scope="col">Gender</th>
                                         <th scope="col">Status</th>
                                         <th scope="col">Designation</th>
@@ -541,11 +541,7 @@
                                         <th scope="col">DOB</th>
                                         <th scope="col">Date of Join</th>
                                         <th scope="col">Attached Branch</th>
-                                        <th scope="col">Address Line 01</th>
-                                        <th scope="col">Address Line 02</th>
-                                        <th scope="col">Address Line 03</th>
-                                        <th scope="col">Address Line 04</th>
-                                        <th scope="col">Address Line 05</th>
+                                        <th scope="col">Address</th>
                                         <th scope="col">ContactNo</th>
                                         <th scope="col">Email</th>
                                         <th scope="col">Inform In Emergency</th>
@@ -590,8 +586,7 @@
 <script src="../../assets/js/dashboardMain.js"></script>
 
 <!-- Controller JS File -->
-<script src="../../controller/Reg_UserController.js"></script>
-<script src="../../controller/DashBoardController.js"></script>
+<script src="../../controller/EmployeeController.js"></script>
 
 
 <!-- Util JS File -->
