--- a/Fronte_End/pages/adminPages/Employee.html
+++ b/Fronte_End/pages/adminPages/Employee.html
@@ -357,7 +357,7 @@
                 <div class="card info-card">
                     <div class="search-bar mt-4">
                         <div class="search-form d-flex align-items-center">
-                            <input type="search" name="employee_Id" id="search_EId" placeholder="Search" title="Enter search keyword">
+                            <input type="search" name="employee_Id" id="search_Id" placeholder="Search" title="Enter search keyword">
                             <button type="button" title="Search"><i class="bi bi-search"></i></button>
                         </div>
                     </div>
