--- a/Fronte_End/pages/adminPages/AdminSetting.html
+++ b/Fronte_End/pages/adminPages/AdminSetting.html
@@ -362,19 +362,19 @@
                         <form class="row" id="userForm">
                             <section id="sec1User" class="col-md-4 mt-3">
 
-                                <div class="mb-sm-0">
-                                    <label class="form-label" for="User_code">User code</label>
-                                    <input type="text" name="User_code" class="form-control" readonly id="User_code"
-                                           placeholder="U00-001">
-                                    <span class="control-error"></span>
-                                </div>
+<!--                                <div class="mb-sm-0">-->
+<!--                                    <label class="form-label" for="User_code">User code</label>-->
+<!--                                    <input type="text" name="User_code" class="form-control" readonly id="User_code"-->
+<!--                                           placeholder="U00-001">-->
+<!--                                    <span class="control-error"></span>-->
+<!--                                </div>-->
 
-                                <div class="mb-sm-0 mt-3">
-                                    <label class="form-label" for="User_name">User name</label>
-                                    <input type="text" name="User_name" class="form-control" id="User_name"
-                                           placeholder="User Name">
-                                    <span class="control-error"></span>
-                                </div>
+<!--                                <div class="mb-sm-0 mt-3">-->
+<!--                                    <label class="form-label" for="User_name">User name</label>-->
+<!--                                    <input type="text" name="User_name" class="form-control" id="User_name"-->
+<!--                                           placeholder="User Name">-->
+<!--                                    <span class="control-error"></span>-->
+<!--                                </div>-->
 
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="User_email">User email</label>
@@ -399,17 +399,18 @@
                                     <span class="control-error"></span>
                                 </div>
 
+                                <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
+                                    <button class="btn btn-success me-md-1" id="btnAddUser" type="button">Add</button>
+                                    <button class="btn btn-warning me-md-1" id="btnUpdateUser" type="button">Update</button>
+                                    <button type="button" class="btn btn-danger me-md-1" id="btnDeleteUser">Delete</button>
+                                </div>
 
                             </section>
 
 
 
                             <section id="sec3User" class="col-md-4 mt-3">
-                                <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
-                                    <button class="btn btn-success me-md-1" id="btnAddUser" type="button">Add</button>
-                                    <button class="btn btn-warning me-md-1" id="btnUpdateUser" type="button">Update</button>
-                                    <button type="button" class="btn btn-danger me-md-1" id="btnDeleteUser">Delete</button>
-                                </div>
+
                             </section>
 
                         </form>
@@ -424,8 +425,8 @@
                                 <table class="table table-light table-striped table-bordered table-hover">
                                     <thead class="text-dark table-danger text-center  table-bordered sticky-top">
                                     <tr>
-                                        <th scope="col">User code</th>
-                                        <th scope="col">User name</th>
+<!--                                        <th scope="col">User code</th>-->
+<!--                                        <th scope="col">User name</th>-->
                                         <th scope="col">User email</th>
                                         <th scope="col">Pass word</th>
                                         <th scope="col">Role</th>
