--- a/Fronte_End/pages/adminDashBoard.html
+++ b/Fronte_End/pages/adminDashBoard.html
@@ -283,6 +283,11 @@
             <i class="bi bi-circle"></i><span>Supplier</span>
           </a>
         </li>
+        <li>
+          <a href="adminPages/Inventory.html">
+            <i class="bi bi-circle"></i><span>Inventory</span>
+          </a>
+        </li>
       </ul>
     </li>
     <!-- End Forms Nav -->
@@ -357,7 +362,7 @@
           <div class="col-xxl-4 col-md-6">
             <div class="card info-card car-card">
               <div class="card-body">
-                <h5 class="card-title">Cars <span>| All Type</span></h5>
+                <h5 class="card-title">Employee <span>| All Type</span></h5>
                 <div class="d-flex align-items-center">
                   <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                     <i class="bi bi-car-front-fill"></i>
@@ -375,7 +380,7 @@
           <div class="col-xxl-4 col-md-6">
             <div class="card info-card car-card">
               <div class="card-body">
-                <h5 class="card-title">Available Cars <span>| Today</span></h5>
+                <h5 class="card-title">Today Employee <span>| Today</span></h5>
                 <div class="d-flex align-items-center">
                   <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                     <i class="bi bi-car-front-fill"></i>
@@ -393,7 +398,7 @@
           <div class="col-xxl-4 col-md-6">
             <div class="card info-card car-card">
               <div class="card-body">
-                <h5 class="card-title">Reserved Cars <span>| Today</span></h5>
+                <h5 class="card-title">Item  <span>| Today</span></h5>
                 <div class="d-flex align-items-center">
                   <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                     <i class="bi bi-car-front-fill"></i>
