--- a/Fronte_End/pages/adminPages/Employee.html
+++ b/Fronte_End/pages/adminPages/Employee.html
@@ -498,6 +498,9 @@
                                 </div>
 
                                 <img id="img" src="../../assets/img/nethmi.jpg" width="300px">
+
+                                <input type="file" id="imgInput" accept="image/*" style="display: none">
+
                                 <!--                <div class="mb-sm-0">-->
                                 <!--                  <label for="role_Type" class="form-label">Role type</label>-->
                                 <!--&lt;!&ndash;                  <select class="form-control" id="role_Type" name="role_Type">&ndash;&gt;-->
